--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dotenv": "^10.0.0",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
+    "react-3d-carousels": "^1.0.2",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.2",
     "reactjs-popup": "^2.0.5",
