--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-coverflow": "^0.2.20",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.2",
+    "react-slideshow-image": "^3.5.0",
     "reactjs-popup": "^2.0.5",
     "smooth-scroll": "^16.1.3"
   },
