--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-3d-carousels": "^1.0.2",
     "react-coverflow": "^0.2.20",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-player": "^2.9.0",
     "react-scripts": "^4.0.2",
     "react-slideshow-image": "^3.5.0",
     "reactjs-popup": "^2.0.5",
