--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "dotenv": "^10.0.0",
     "emailjs-com": "^2.6.4",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.1",
     "react-3d-carousels": "^1.0.2",
     "react-coverflow": "^0.2.20",
